# IC3ref

./: CMakeLists.txt  Certificate.cpp  Certificate.h  IC3.cpp  IC3.h  Model.cpp  Model.h  README  main.cpp
